<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_holder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <RelativeLayout
        android:id="@+id/gridlines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">
...
        android:layout_marginRight="230dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/ic_shortcut_normal"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/sticker"
        android:layout_width="37dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="314dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="145dp"
        android:src="@drawable/ic_star_on" />

    <ImageView
        android:id="@+id/smiley"
        android:layout_width="39dp"
        android:layout_height="77dp"
        android:layout_alignTop="@id/sticker"
        android:layout_alignRight="@id/sticker"
        android:layout_marginTop="0dp"
        android:layout_marginRight="51dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/ic_smiley"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/clockStamp"
        android:layout_width="39dp"
        android:layout_height="77dp"
        android:layout_alignTop="@id/sticker"
        android:layout_alignRight="@id/sticker"
        android:layout_marginLeft="-170dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="98dp"
        android:layout_marginBottom="-457dp"
        android:src="@drawable/ic_time"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/cry"
        android:layout_width="39dp"
        android:layout_height="77dp"
        android:layout_alignTop="@id/sticker"
        android:layout_alignRight="@id/sticker"
        android:layout_marginLeft="-170dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="144dp"
        android:layout_marginBottom="-457dp"
        android:src="@drawable/ic_cry"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/angry"
        android:layout_width="39dp"
        android:layout_height="77dp"
        android:layout_alignTop="@id/sticker"
        android:layout_alignRight="@id/sticker"
        android:layout_marginLeft="-170dp"
        android:layout_marginTop="63dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="-457dp"
        android:src="@drawable/ic_angry"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/laugh"
        android:layout_width="39dp"
        android:layout_height="77dp"
        android:layout_alignTop="@id/sticker"
        android:layout_alignRight="@id/sticker"
        android:layout_marginLeft="-170dp"
        android:layout_marginTop="63dp"
        android:layout_marginRight="93dp"
        android:layout_marginBottom="-457dp"
        android:src="@drawable/ic_laugh"
        android:visibility="gone"  />

    <ImageView
        android:id="@+id/heart"
        android:layout_width="39dp"
        android:layout_height="77dp"
        android:layout_alignTop="@id/sticker"
        android:layout_alignRight="@id/sticker"
        android:layout_marginLeft="-170dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="138dp"
        android:layout_marginBottom="-457dp"
        android:src="@drawable/ic_heart"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/canada"
        android:layout_width="39dp"
        android:layout_height="77dp"
        android:layout_alignTop="@id/sticker"
        android:layout_alignRight="@id/sticker"
        android:layout_marginLeft="-170dp"
        android:layout_marginTop="62dp"
...
        android:layout_marginBottom="-457dp"
        android:src="@drawable/ic_canada"
        android:visibility="gone" />


    <ImageView
        android:id="@+id/rainbow"
        android:layout_width="39dp"
        android:layout_height="77dp"
        android:layout_alignTop="@id/sticker"
        android:layout_alignRight="@id/sticker"
        android:layout_marginTop="1dp"
        android:layout_marginRight="193dp"
...
        android:layout_marginRight="193dp"
        android:layout_marginBottom="0dp"
        android:src="@drawable/ic_cancel"

        android:visibility="gone" />
    <LinearLayout
        android:id="@+id/btn_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal|bottom"
        android:background="@color/pink">


        <ImageView
            android:id="@+id/toggle_camera"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_weight="1"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_camera_front"/>

        <ImageView
            android:id="@+id/shutter"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_weight="1"
            android:src="@drawable/ic_shutter"/>

        <ImageView
...
